benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_ModExp_DivMod_ModExpPow2_Zeroes_iter4_error.log
=== Verification Error - Iteration 4 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_DivMod_ModExpPow2_Zeroes.rs
Time: 2025-09-15 19:11:06

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0599]: no method named `subsequence` found for struct `vstd::seq::Seq` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_ModExpPow2_Zeroes_impl.rs:31:38
   |
31 |     invariant n as nat == Str2Int(s@.subsequence(0, i as int))
   |                                      ^^^^^^^^^^^ method not found in `Seq<char>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.

--------------------------------------------------------------------------------

Additional Output:
error[E0599]: no method named `subsequence` found for struct `vstd::seq::Seq` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_ModExpPow2_Zeroes_impl.rs:31:38
   |
31 |     invariant n as nat == Str2Int(s@.subsequence(0, i as int))
   |                                      ^^^^^^^^^^^ method not found in `Seq<char>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
